syntax = "proto3";

option csharp_namespace = "Common.Protobuf";

import "Vector.proto";

// Name: ANCKCFFOAID
message AbilityActionGenerateElemBall {
    uint32 room_id = 2;
    Vector rot = 9;
    Vector pos = 14;
}

