syntax = "proto3";

option csharp_namespace = "Common.Protobuf";

import "AbilityAppliedAbility.proto";

// Name: JOAGDFOJABP
message AbilityMetaAddAbility {
    AbilityAppliedAbility ability = 1;
}

