syntax = "proto3";

option csharp_namespace = "Common.Protobuf";


// Name: GKPKECDLNPD
message AbilityMetaModifierDurabilityChange {
    float reduce_durability = 9; // AJHLPJGEIMN
    float remain_durability = 5; // OHHCCMMBDIH
}

