syntax = "proto3";

option csharp_namespace = "Common.Protobuf";

import "AbilityScalarValueEntry.proto";

// Name: AHCCOPHKLIK
message AbilityMetaReInitOverrideMap {
    repeated AbilityScalarValueEntry override_map = 5;
}

