syntax = "proto3";

option csharp_namespace = "Common.Protobuf";

import "Vector.proto";

// Name: ELDHFMJIHOO
message AbilityMixinShootFromCamera {
    Vector forward = 10;
    Vector init_pos = 3;
}

