syntax = "proto3";
option csharp_namespace = "Common.Protobuf";

import "AbilityInvokeEntry.proto";

message ClientAbilityInitFinishNotify {
	uint32 entity_id = 8;
	repeated AbilityInvokeEntry invokes = 7;
}
