syntax = "proto3";
option csharp_namespace = "Common.Protobuf";

import "CombatTypeArgument.proto";
import "ForwardType.proto";

message CombatInvokeEntry {
	CombatTypeArgument argument_type = 4;
	bytes combat_data = 1;
	ForwardType forward_type = 12;
}
