syntax = "proto3";

option csharp_namespace = "Common.Protobuf";

import "Vector.proto";

// Name: OEIONLNODLN
message EvtFaceToDirInfo {
    Vector face_dir = 12;
    uint32 entity_id = 2;
}

