syntax = "proto3";
option csharp_namespace = "Common.Protobuf";

message UnionCmd {
	uint32 message_id = 7;
	bytes body = 14;
}
