syntax = "proto3";
option csharp_namespace = "Common.Protobuf";

import "UnionCmd.proto";

message UnionCmdNotify {
	repeated UnionCmd cmd_list = 7;
}
